# dotfiles

./: .gitignore  LICENSE
.dotter/: global.toml  template-local.toml
files/: common.env
files/alacritty/: alacritty.yml
files/emacs/: init-org.org  init.el
files/eww/: eww.scss  eww.yuck
files/fcitx5/: config  xprofile
files/git/: fzf-gadd  gitconfig  gitmessage
files/git/script/: emoji-commit  fzf-gadd
files/greetd/: config.toml  regreet.toml
files/i3/: config  i3.desktop  xinitrc
files/leftwm/: config.ron  leftwm-start.sh  leftwm.desktop
files/leftwm/theme/: down  picom.conf  theme.ron  up
files/micro/: settings.json
files/neovim/: init.lua  lazy-lock.json  plugins.lua
files/neovim/lua/: lsp.lua  plugins.lua
files/qtile/: config.py
files/qutebrowser/: autoconfig.yml
files/rofi/: config.rasi
files/sway/: config  sway-start.sh  sway.desktop
files/sway/eww/: eww.scss
files/sway/scripts/: get-simpletree  send-to-workspace  switch-workspace
files/theme/: index.theme
files/tmux/: status-line  tmux.conf
files/vivid/: filetypes.yml
files/waybar/: config  style.css
files/zabrze/: config.yaml
files/zsh/: .zshrc  plugins.toml  zshenv  zshrc
files/zsh/scripts/: fzf-select-files
home/.config/: common.env
home/.config/alacritty/: alacritty.yml
home/.config/bat/: config
home/.config/eww/bar/: Cargo.toml  eww.scss  eww.yuck
home/.config/eww/bar/src/: battery.rs  colors.rs  main.rs  network.rs  thermal.rs  workspaces.rs  yuck.rs
home/.config/fcitx5/: config
home/.config/git/: config
home/.config/hypr/: env.conf  (+2 more)
(+27 files in other folders)
