[package]
name = "bar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
starship-battery = "0.8.0"
swayipc = "3.0.1"
sysinfo = { version = "0.28.4", default-features = false }
