[package]
name = "bar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
hyprland = { version = "0.3.9", default-features = false, features = ["listener", "async-std"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
starship-battery = "0.8.0"
sysinfo = { version = "0.28.4", default-features = false }
